--- a/matcher/templates/no_match.html
+++ b/matcher/templates/no_match.html
@@ -33,14 +33,14 @@
 
   <p>{{ '{:,d}'.format(items_without_matches.count()) }} items</p>
 
-  {% for i in items_without_matches %}
-    <p><a href="{{ url_for('item_page', wikidata_id=i.qid[1:]) }}">{{ i.label }} ({{ i.qid }})</a><br>
+  {% for item in items_without_matches %}
+    <p><a href="{{ url_for('item_page', wikidata_id=item.item_id) }}">{{ item.label }} ({{ item.qid }})</a><br>
       <ul>
-        {% if i.categories %}
-          <li>Wikipedia categories: {{ ', '.join(i.categories) }}</li>
+        {% if item.categories %}
+          <li>Wikipedia categories: {{ ', '.join(item.categories) }}</li>
         {% endif %}
-        {% if i.tags %}
-          <li>possible OSM tags: {{ ', '.join(i.tags) }}</li>
+        {% if item.tags %}
+          <li>possible OSM tags: {{ ', '.join(item.tag_list) }}</li>
         {% endif %}
       </ul>
     </p>
