--- a/matcher/templates/error_page.html
+++ b/matcher/templates/error_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Changes{% endblock %}
+{% block title %}Error{% endblock %}
 
 {% block content %}
 <div class="container my-2">
