explain source of saved pages

--- a/matcher/templates/saved.html
+++ b/matcher/templates/saved.html
@@ -8,6 +8,8 @@
   <div class="container my-2">
 <h1>{% if g.get('filter') %}{{ g.filter }}{% else %}Saved places{% endif %}</h1>
 
+<p>These places have been analysed and the match results records.</p>
+
 <table class="table table-responsive table-hover m-2">
   <thead>
     <tr>
