--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -24,6 +24,7 @@
     <ul class="navbar-nav mr-auto">
     <ul class="navbar-nav mr-auto">
       {{ nav_item('changesets') }}
+      {{ nav_item('tag_list') }}
       {{ nav_item('saved_places') }}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
