--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -9,6 +9,8 @@
 </div>
 {% endmacro %}
 
+{% macro taginfo_link(tag) %}{% if '=' in tag %}<a href="https://taginfo.openstreetmap.org/tags/{{ tag }}">{{ tag }}</a>{% else %}<a href="https://taginfo.openstreetmap.org/keys/{{ tag }}" class="text-nowrap">{{ tag }}</a>{% endif -%}{%- endmacro -%}
+
 {% macro candidate_info(c, filtered={}) %}
   {% set m = c.get_match() %}
     <li>{{c.osm_type}}:
