--- a/matcher/templates/criteria.html
+++ b/matcher/templates/criteria.html
@@ -1,3 +1,4 @@
+{% from "macro.html" import taginfo_link %}
 {% extends "base.html" %}
 
 {% block title %}Matching criteria: {% endblock %}
@@ -59,11 +60,7 @@
         <ul class="card-text">
           {% for tag in i.tags %}
             <li>
-            {% if '=' in tag %}
-              <a href="https://taginfo.openstreetmap.org/tags/{{ tag }}">{{ tag }}</a>
-            {% else %}
-              <a href="https://taginfo.openstreetmap.org/keys/{{ tag }}" class="text-nowrap">{{ tag }}</a>
-            {% endif %}
+              {{ taginfo_link(tag) }}
               {% if tag in taginfo %}({{ '{:,d}'.format(taginfo[tag].count_all) }}){% endif -%}
             </li>
           {% endfor %}
