narrow tag list table

--- a/matcher/templates/tag_list.html
+++ b/matcher/templates/tag_list.html
@@ -15,7 +15,7 @@ searched for using this tool.</p>
 <p>Sort by <a href="{{ url_for('tag_list') }}">alphabetically</a>
 or by <a href="{{ url_for('tag_list', sort='count') }}">item count</a>.</p>
 
-<table class="table table-hover table-sm">
+<table class="table table-hover table-sm" style="width:auto">
 <tr>
 <th>tag or key</th>
 <th class="text-right">item count</th>
