--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -13,7 +13,7 @@
 
   <div class="alert alert-info" role="alert">
     <p>Downloading data from the Overpass API can fail if the area is too large or dense.</p>
-    <p>Frequent access of the Overpass API can cause rate limiting. If the happens wait a few minutes, then try again.</p>
+    <p>Frequent access of the Overpass API can cause rate limiting. If this happens wait a few minutes, then try again.</p>
   </div>
 
   <div class="row">
