--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -11,13 +11,13 @@
 
 {% macro taginfo_link(tag) %}{% if '=' in tag %}<a href="https://taginfo.openstreetmap.org/tags/{{ tag }}">{{ tag }}</a>{% else %}<a href="https://taginfo.openstreetmap.org/keys/{{ tag }}" class="text-nowrap">{{ tag }}</a>{% endif -%}{%- endmacro -%}
 
-{% macro candidate_info(c, filtered={}, is_bad=false) %}
+{% macro candidate_info(c, is_picked=false, is_bad=false) %}
   {% set m = c.get_match() %}
     <li>{{c.osm_type}}:
       <a href="{{ url_for('match_detail', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">{{ c.label }}</a>
       <a href="https://www.openstreetmap.org/{{ c.osm_type }}/{{ c.osm_id }}">(OSM)</a>
     {% if c.dist and c.dist > 1 %}
-     {{ c.dist | int }} m from Wikidata
+     {{ '{:,d}'.format(c.dist | int) }} m from Wikidata
     {% else %}
       <span class="badge badge-success">exact location match</span>
     {% endif %}
@@ -25,20 +25,27 @@
 
        {% if is_bad %}
          <span class="badge badge-danger">bad match reported</span>
-       {% elif c.item_id in filtered and c == filtered[c.item_id] %}
+       {% elif is_picked %}
          <span class="badge badge-info">best match</span>
        {% endif %}
 
      <a href="#" class="show-tags-link" data-key="{{ c.key }}">[show tags]</a>
-     {% if not is_bad %}
+     {% if not is_bad and g.user.is_authenticaed %}
          <a href="#" class="bad-match-link" data-key="{{ c.key }}">[report bad match]</a>
+     {% endif %}
+     {% if is_bad %}
+         {% for bad in c.bad_matches %}
+            <div class="alert alert-danger mt-2">
+            <strong><a href="https://www.openstreetmap.org/user/{{ bad.user.username }}" class="alert-link">{{ bad.user.username }}</a></strong> reported this as a bad match ({{ bad.created.strftime('%H:%M %a, %d %b %Y') }})
+            </div>
+         {% endfor %}
      {% endif %}
      <div class="all-tags" id="candidate-{{ c.key }}">
        {% for k, v in c.tags.items() if k != 'way_area' %}
         {{ k }}: {{ v }}</br>
        {% endfor %}
      </div>
-     {% if not is_bad %}
+     {% if not is_bad and g.user.is_authenticaed %}
      <div class="bad-match" id="bad-match-{{ c.key }}">
        <form method="POST" action="{{ url_for('bad_match', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">
          <div class="form-group">
