--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -131,6 +131,15 @@
         <p><a class="btn btn-primary" href="{{ url_for('social.auth', backend='openstreetmap', next=request.script_root + request.full_path) }}">login to upload wikidata tags</a></p>
       {% endif %}
 
+      {% set candidate_count = item.candidates.count() %}
+      {% if candidate_count == 0 %}
+        <p>no matches found</p>
+      {% elif candidate_count == 1 %}
+        <p>found a single match candidate</p>
+      {% else %}
+        <p>found {{ candidate_count }} matches candidate</p>
+      {% endif %}
+
       {% for c in item.candidates %}
         {% set is_bad = c.bad_matches.count() %}
         {% set m = c.get_match() %}
@@ -155,7 +164,7 @@
               <span class="badge badge-danger">bad match reported</span>
           {% endif %}
           <a href="#" class="show-tags-link" data-key="{{ c.key }}">[show tags]</a>
-          {% if not is_bad %}
+          {% if not is_bad and g.user.is_authenticated %}
               <a href="#" class="bad-match-link" data-key="{{ c.key }}">[report bad match]</a>
           {% endif %}
 
@@ -170,7 +179,7 @@
             <strong><a href="https://www.openstreetmap.org/user/{{ bad.user.username }}" class="alert-link">{{ bad.user.username }}</a></strong> reported this as a bad match ({{ bad.created.strftime('%H:%M %a, %d %b %Y') }})
             </div>
             {% endfor %}
-          {% else %}
+          {% elif g.user.is_authenticated %}
      <div class="bad-match" id="bad-match-{{ c.key }}">
        <form method="POST" action="{{ url_for('bad_match', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">
          <div class="form-group">
