--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -30,13 +30,16 @@
        {% endif %}
 
      <a href="#" class="show-tags-link" data-key="{{ c.key }}">[show tags]</a>
-     {% if not is_bad and g.user.is_authenticaed %}
+     {% if not is_bad and g.user.is_authenticated %}
          <a href="#" class="bad-match-link" data-key="{{ c.key }}">[report bad match]</a>
      {% endif %}
      {% if is_bad %}
          {% for bad in c.bad_matches %}
             <div class="alert alert-danger mt-2">
             <strong><a href="https://www.openstreetmap.org/user/{{ bad.user.username }}" class="alert-link">{{ bad.user.username }}</a></strong> reported this as a bad match ({{ bad.created.strftime('%H:%M %a, %d %b %Y') }})
+            {% if bad.comment %}
+                <div>{{ bad.comment | newline_br }}</div>
+            {% endif %}
             </div>
          {% endfor %}
      {% endif %}
@@ -45,12 +48,12 @@
         {{ k }}: {{ v }}</br>
        {% endfor %}
      </div>
-     {% if not is_bad and g.user.is_authenticaed %}
+     {% if not is_bad and g.user.is_authenticated %}
      <div class="bad-match" id="bad-match-{{ c.key }}">
        <form method="POST" action="{{ url_for('bad_match', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">
          <div class="form-group">
            <label for="comment">what's wrong with this match? (optional)</label>
-           <textarea class="form-control" id="comment" rows="3"></textarea>
+           <textarea class="form-control" name="comment" id="comment" rows="3"></textarea>
          </div>
 
          <button class="btn btn-danger btn-sm">report as bad match</button>
