--- a/matcher/templates/index.html
+++ b/matcher/templates/index.html
@@ -19,41 +19,7 @@
 </div>
 
 <div class="container">
-    <div class="card-columns">
-  {% for place in existing[:30] %}
-    <div class="card">
-      <h5 class="card-header">
-        {% if place.address.country_code == 'us' %}
-            {% set name = place.name ~ ', ' ~ place.address.state %}
-        {% else %}
-            {% set name = place.name %}
-        {% endif %}
-        {% if place.state == 'overpass_timeout' %}
-          {{ name }}
-        {% else %}
-          <a href="{{ place.candidates_url() }}">{{ name }}</a>
-        {% endif %}
-        <span class="text-muted small font-weight-normal">
-          ({{ '{:,.1f}'.format(place.area_in_sq_km) }}km&sup2;)</span>
-      </h5>
-      <div class="card-block">
-        {% if place.address.country_code != 'us' and place.address.country != place.name %}
-            <p class="card-text">{{ place.address.country }}</p>
-        {% endif %}
-        <ul class="card-text list-unstyled">
-        {% if place.item_count is number %}
-          <li>{{ '{:,d}'.format(place.item_count) }} Wikidata items</li>
-        {% endif %}
-        {% if place.candidate_count is number %}
-          <li>{{ '{:,d}'.format(place.candidate_count) }} matches
-            ({{ '{:.1%}'.format(place.match_ratio) }})
-          </li>
-        {% endif %}
-        </p>
-      </div>
-    </div>
-  {% endfor %}
-  </div>
+  {{ place_cards | safe }}
   <div class="text-right"><a href="{{ url_for('saved_places') }}">more places &hellip;</a>
   {#
   <p>The aim is for a single OSM entity to link to one Wikidata item. Many geographical entities are represented by multiple objects in OSM with the same name, for example dual carriageway bridges are mapped as two roadways, or buildings within a large site like a hospital.</p>
