--- a/matcher/templates/saved.html
+++ b/matcher/templates/saved.html
@@ -28,29 +28,7 @@
     </tr>
   </thead>
   <tbody>
-  {% for place in existing %}
-    {% set with_candidates_count = place.candidate_count %}
-    <tr>
-      <td>
-        {% if place.state == 'overpass_timeout' %}
-          {{ place.display_name.replace(';', '; ') }} <span class="badge badge-danger">Overpass timeout</span>
-        {% else %}
-          <a href="{{ place.candidates_url() }}">{{ place.display_name.replace(';', '; ') }}</a>
-        {% endif %}
-      </td>
-      {% set item_count = place.item_count %}
-      <td class="text-right">{{ '{:,d}'.format(item_count) if item_count is number }}</td>
-      <td class="text-right">{{ with_candidates_count if with_candidates_count is number }}</td>
-      <td class="text-right">
-      {% if place.state == 'ready' %}
-        {{ '{:.1%}'.format(place.match_ratio) if place.match_ratio is number }}
-      {% endif %}
-      <td class="text-right">
-        {{ '{:,.1f}'.format(place.area_in_sq_km) }}
-      </td>
-      </td>
-    </tr>
-  {% endfor %}
+  {{ place_tbody | safe }}
   </tbody>
 </table>
 </div>
