--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -165,7 +165,7 @@
           {% endif %}
           <a href="#" class="show-tags-link" data-key="{{ c.key }}">[show tags]</a>
           {% if not is_bad and g.user.is_authenticated %}
-              <a href="#" class="bad-match-link" data-key="{{ c.key }}">[report bad match]</a>
+              <a href="#" class="bad-match-link" id="report-link-{{ c.key }}" data-key="{{ c.key }}">[report bad match]</a>
           {% endif %}
 
            <div class="all-tags" id="candidate-{{ c.key }}">
@@ -183,14 +183,16 @@
             </div>
             {% endfor %}
           {% elif g.user.is_authenticated %}
+     <div class="bad-reported" id="reported-{{ c.key }}">
+        <span class="badge badge-danger">bad match report saved</span>
+     </div>
      <div class="bad-match" id="bad-match-{{ c.key }}">
-       <form method="POST" action="{{ url_for('bad_match', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">
          <div class="form-group">
-           <label for="comment">what's wrong with this match? (optional)</label>
-           <textarea class="form-control" id="comment" rows="3"></textarea>
+           <label for="comment-{{ c.key }}">what's wrong with this match? (optional)</label>
+           <textarea class="form-control" id="comment-{{ c.key }}" rows="3"></textarea>
          </div>
 
-         <button class="btn btn-danger btn-sm">report as bad match</button>
+       <button class="btn btn-danger btn-sm bad-match-save" data-item="{{ c.item_id }}" data-osm-type="{{ c.osm_type }}", data-osm-id="{{ c.osm_id }}" data-key="{{ c.key }}">report as bad match</button>
        </form>
      </div>
           {% endif %}
