--- a/matcher/templates/search_results.html
+++ b/matcher/templates/search_results.html
@@ -4,7 +4,7 @@
 {% for hit in results %}
   <div class="box">
     {% if hit.icon %}<img src="{{ hit.icon.replace('http://', 'https://') }}">{% endif %}
-      {% if hit.osm_type != 'node' and hit.category != 'leisure' and hit.category != 'building' and hit.category != 'highway' and hit.category != 'railway' and (hit.osm_type == 'node' or not hit.area or hit.area < 90000) %}
+      {% if hit.osm_type != 'node' and hit.category in ('place', 'boundary') and (not hit.area or hit.area < 90000) %}
       <b>
         {% if hit.place and hit.place.state == 'ready' %}
             {% set hit_url = hit.place.candidates_url() %}
@@ -21,8 +21,8 @@
           {{ hit.display_name }}
         {% endif %}
         </b><br>
-        {% if hit.category == 'highway' %}
-            [matcher only works with polygons, not roads]<br>
+        {% if hit.category not in ('place', 'boundary') %}
+            [matcher only works with place or boundary]<br>
         {% elif hit.osm_type in ('way', 'relation') and hit.area and hit.area >= 90000 %}
             [area too large]<br>
         {% endif %}
