--- a/matcher/templates/navbar.html
+++ b/matcher/templates/navbar.html
@@ -16,7 +16,7 @@
   </button>
   <a class="navbar-brand" href="{{ url_for('.index') }}">OSM ↔ Wikidata</a>
 
-  <form class="form-inline" action="{{ url_for('.index') }}">
+  <form class="form-inline" action="{{ url_for('.search_results') }}">
     <input class="form-control mr-sm-2" name="q" type="text" placeholder="Search">
   </form>
 
