--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -90,6 +90,7 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
 
     <div class="my-3">
     {% for item in candidates %}
+      {% set search_tags = item.tag_list %}
       <p>
       {% set picked = filtered[item.item_id]['candidate'] or none %}
       {% if upload_okay %}
@@ -107,7 +108,7 @@ added tags to {{ '{:,d}'.format(obj.update_count) }} OSM elements
       {% if 'note' in filtered[item.item_id] %}
         {{ filtered[item.item_id]['note'] }}
       {% else %}
-        search tags: {{ ', '.join(item.tag_list) }}
+        search tags: {{ ', '.join(search_tags) }}
       {% endif %}
       <p>
       {# <br>
