--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -12,6 +12,7 @@
 {% macro taginfo_link(tag) %}{% if '=' in tag %}<a href="https://taginfo.openstreetmap.org/tags/{{ tag }}">{{ tag }}</a>{% else %}<a href="https://taginfo.openstreetmap.org/keys/{{ tag }}" class="text-nowrap">{{ tag }}</a>{% endif -%}{%- endmacro -%}
 
 {% macro candidate_info(c, is_picked=false, is_bad=false) %}
+  {% set search_tags = c.item.tag_list %}
   {% set m = c.get_match() %}
     <li>{{c.osm_type}}:
       <a href="{{ url_for('match_detail', item_id=c.item_id, osm_type=c.osm_type, osm_id=c.osm_id) }}">{{ c.label }}</a>
@@ -45,7 +46,12 @@
      {% endif %}
      <div class="all-tags" id="candidate-{{ c.key }}">
        {% for k, v in c.tags.items() if k != 'way_area' %}
-        {{ k }}: {{ v }}</br>
+        {% set tag = k + '=' + v %}
+        {% if k in search_tags or tag in search_tags %}
+            <b>{{ tag }}</b>
+        {% else %}
+            {{ tag }}
+        {% endif %}<br />
        {% endfor %}
      </div>
      {% if not is_bad and g.user.is_authenticated %}
