--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -62,10 +62,11 @@
       </tr>
     </thead>
     <tbody>
+    {% set lang = place.most_common_language() %}
     {% for i, c in table %}
       <tr id="{{ i.qid }}-{{c.osm_type }}-{{ c.osm_id }}">
         <td>
-          <a href="{{ url_for('item_page', wikidata_id=i.qid[1:]) }}">{{ i.label }} ({{ i.qid }})</a></p>
+          <a href="{{ url_for('item_page', wikidata_id=i.qid[1:]) }}">{{ i.label(lang=lang) }} ({{ i.qid }})</a></p>
         </td>
         <td>
           {% set m = c.get_match() %}
