--- a/matcher/templates/wikidata_items.html
+++ b/matcher/templates/wikidata_items.html
@@ -61,8 +61,8 @@
         {% if item.categories %}
           <li>Wikipedia categories: {{ ', '.join(item.categories) }}</li>
         {% endif %}
-        {% if item.tag_list %}
-          <li>possible OSM tags: {{ ', '.join(item.tag_list) }}</li>
+        {% if item.tags %}
+          <li>possible OSM tags: {{ ', '.join(item.tags|sort) }}</li>
         {% endif %}
       </ul>
     </p>
